[package]
name = "stress-lb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
affinity = "0.1.2"
clap = { version = "3.1.6", features = ["derive"] }
duration-str = "0.3.9"
libc = "0.2.121"
signal-hook = "0.3.13"
errno = "0.2.8"
volatile = "0.4.4"
